--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7,6 +7,20 @@ body {
   font-family: 'Open Sans', sans-serif;
 }
 
+a {
+  text-decoration: none;
+  color: #000;
+}
+
+a:visited {
+  color: #000;
+}
+
+a:hover {
+  color: #2874A6;
+  font-weight: 600;
+}
+
 #hdr {
   height: 350px;
   line-height: 33px;
@@ -55,7 +69,7 @@ img.ashok-stambh {
   background-color: #fff;
   z-index: 100;
   box-shadow: 0px 2px 10px 0px rgba(0,0,0, .5);
-  margin-top: -195px;
+  margin-top: -145px;
   border-radius: 5px;
 }
 
@@ -71,20 +85,15 @@ ul.nav li {
   padding: 10px 10px;
   text-align: center;
   font-size: .9rem;
-  width: 19.2%;
+  width: 19.6%;
   box-sizing: border-box;
+  /*background: #fff8dc;*/
 }
-
 
 ul.nav li:hover {
-  color: #2874A6;
-  cursor: pointer;
-  font-weight: 600;
+  /*background: #fff8d2;*/
 }
 
-.content {
-
-}
 
 footer {
   font-size: .7rem;
@@ -243,4 +252,75 @@ margin-top: -1px;
 
 }
 
-//DRY Principle: Don't Repeat Yourself
+
+.message{
+  margin: 30px 20px;
+  font-size: .9 rem;
+  font-family: Arial, Helvetica, sans-serif;
+  text-align : justify;
+}
+.message header{
+ 
+  margin: 10px 20px;
+  text-align : center;
+  font-size: 50%;
+  font-family: Arial, Helvetica, sans-serif;
+  
+}
+.message body{
+ 
+  margin: 10px 20px;
+  font-size: 50%;
+  font-family: Arial, Helvetica, sans-serif;
+  text-align : justify;
+  
+}
+.message footer{
+  
+  margin: 10px 20px;
+  font-size: 100%;
+  font-family: 'Times New Roman', Times, serif;
+  text-align : right;
+  
+}
+
+
+/*DRY Principle: Don't Repeat Yourself*/
+
+
+
+/*
+#name {
+  font-size: 5rem;
+}*/
+
+
+.bold {
+  font-weight: bold;
+}
+
+
+.lighter {
+  opacity: .5;
+}
+
+.top {
+  background-color: #6d5454;
+  width: 200px;
+  height: 300px;
+  display: inline-block;
+}
+
+.top .inner div {
+  font-size: 50px;
+}
+
+.top .inner div:hover {
+  color: red;
+}
+
+.trgt {
+  background-color: #2874A6;
+  width: 300px;
+  height: 150px;
+}
